[project]
name = "Hohonu_QARTOD"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Alex Kerney", email = "abk@mac.com"}]
requires-python = ">= 3.11"
dependencies = ["streamlit", "pydantic", "pyyaml", "ioos-qc", "pandas", "bokeh"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
Hohonu_QARTOD = { path = ".", editable = true }

[tool.pixi.tasks]
start = "streamlit run src/app.py"
